fix(Button): change overflow on small buttons to show descenders

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -27,6 +27,7 @@
   .button--sm & {
     /* Offset to better align text in small button */
     transform: translateY(-1px);
+    overflow: visible;
     gap: calc(var(--eds-spacing-size-half) * 1px);
   }
 
